# veresy

./: README.md
src/: CMakeLists.txt  main.cpp
src/app/: Application.cpp  Application.h
src/core/orders/: Order.h  OrderManager.cpp  OrderManager.h
src/data/: Database.cpp  Database.h
src/data/repositories/: OrderRepository.cpp  OrderRepository.h
src/ui/: MainWindow.cpp  MainWindow.h  OrderDialog.cpp  OrderDialog.h  OrderTableModel.cpp  OrderTableModel.h  OrderTableView.cpp  OrderTableView.h
